gloo-all/72-rate-limiting-jwt/config/default-vs-rate-limit-jwt.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: ceposta-gloo-demo-dns
      namespace: gloo-system      
    sniDomains:
    - ceposta-gloo-demo.solo.io    
  virtualHost:
    domains:
    - 'ceposta-gloo-demo.solo.io'
    routes:
    - matchers:
      - prefix: /httpbin
      routeAction:
        single:
          upstream:
            name: default-httpbin-8000 
            namespace: gloo-system     
      options:
        prefixRewrite: '/headers'   
        jwt:
          disable: false            
        rateLimitConfigs:
          refs:
          - name: http-headers-limit
            namespace: gloo-system                                
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-web-api-8080
            namespace: gloo-system
      options:
        jwt:
          disable: true
        options:
    options:
      jwt:
        providers:
          solo:
            tokenSource:
              headers:
                - header: x-token
              queryParams:
                - token
            claimsToHeaders:
              - claim: type
                header: x-type
              - claim: number
                header: x-number
            issuer: solo.io
            jwks:
              local:
                key: |
                  -----BEGIN PUBLIC KEY-----
                  MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAxdil+UiTSKYKV90YkeZ/
[...]
                  jwIDAQAB
                  -----END PUBLIC KEY-----
