gloo-all/72-rate-limiting-jwt/config/default-vs-rate-limit.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: ceposta-gloo-demo-dns
      namespace: gloo-system      
    sniDomains:
    - ceposta-gloo-demo.solo.io    
  virtualHost:
    domains:
    - 'ceposta-gloo-demo.solo.io'
    routes:
    - matchers:
      - prefix: /httpbin
      routeAction:
        single:
          upstream:
            name: default-httpbin-8000 
            namespace: gloo-system     
      options:
        prefixRewrite: '/headers'             
        rateLimitConfigs:
          refs:
          - name: http-headers-limit
            namespace: gloo-system                                
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-web-api-8080
            namespace: gloo-system
